--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^9.1.2",
     "material-ui": "^1.0.0-beta.47",
     "react": "^17.0.2",
+    "react-data-table-component": "^7.4.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.5",
@@ -29,7 +30,7 @@
     "redux-actions": "^2.6.5",
     "redux-firestore": "^0.15.0",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.3.1",
+    "styled-components": "^5.3.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
