--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-data-table-component": "^7.4.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-images-uploading": "^3.1.3",
     "react-redux": "^7.2.5",
     "react-redux-firebase": "^3.10.0",
     "react-router-dom": "^5.3.0",
